# Lookout

./: .gitignore  CLAUDE.md  ENRICH_LOOP.md  lefthook.yml  manifest  pyproject.toml  vendors.yaml
.github/workflows/: ci.yml
campaign/: next_batch.csv  retry_batch.csv  state.json
campaign/run_1/: run_report.csv  variant_image_assignments.csv
campaign/run_2/: run_report.csv  variant_image_assignments.csv
campaign/run_3/: run_report.csv  variant_image_assignments.csv
docs/superpowers/plans/: 2026-03-25-lookout-remodel.md  2026-03-26-shopify-apply-review-feedback.md  2026-03-27-external-tool-integration.md  2026-03-28-variant-image-swatch-scraping.md  2026-03-29-pipeline-signals-regression-suite.md  2026-03-29-post-scrape-match-validation.md  2026-04-05-brave-image-search-fallback.md  2026-04-07-dolt-checkpoint.md  2026-04-07-vision-catalog-tools.md
docs/superpowers/specs/: 2026-03-25-lookout-remodel-design.md  2026-03-27-external-tool-integration-design.md  2026-03-28-variant-image-swatch-scraping-design.md  2026-03-29-pipeline-signals-regression-suite-design.md  2026-03-29-post-scrape-match-validation-design.md  2026-04-05-brave-image-search-fallback-design.md  2026-04-05-feedback-analysis-design.md  2026-04-06-unified-push-undo-design.md  2026-04-07-dolt-checkpoint-design.md  (+1 more)
infra/firecrawl/: .env.example  docker-compose.yml
infra/searxng/: docker-compose.yml
lookout/: cli.py  store.py
lookout/apply/: backup.py  models.py  revert.py  writer.py
lookout/audit/: auditor.py  gmc_signals.py  health_checks.py  models.py  online_signals.py  priority_fn.py  shipping.py  weight_config.py  weight_optimizer.py
lookout/enrich/: __init__.py  brave_images.py  cli.py  color_families.py  colors.py  csv_parser.py  extractor.py  fact_scorer.py  firecrawl_scraper.py  generator.py  gmc_rules.py  io.py  llm.py  llm_client.py  match_validator.py  merchandiser.py  models.py  optimize.py  pipeline.py  resolver.py  scorer.py  scraper.py  season_signals.py  shopify_api_placeholder.py  shopify_output.py  shopify_scraper.py  tagger.py
lookout/enrich_web/: __init__.py  app.py  job_queue.py  routes.py  schemas.py  storage.py  worker.py
lookout/feedback/: analyzer.py  collector.py  replay.py  report.py
lookout/output/: alt_text.py  enrich_export.py  google_shopping.py  matrixify.py
lookout/push/: checkpoint.py  manifest.py  pusher.py  undo.py
lookout/ranking/: collection_ranker.py  ranker.py
lookout/review/: dashboard.py  dispositions.py  report.py  server.py
lookout/taxonomy/: mappings.py
scripts/: audit_variant_images.py  batch_validate.py  catalog_health_audit.py  classify_color_families.py  smoke_test_vision.py
test_set/optimize_log/: prompt_iter_1.prompt  prompt_iter_2.prompt  summary.json
tests/: __init__.py  firecrawl_validation.py  test_analyzer.py  test_apply.py  test_audit.py  test_brave_images.py  test_checkpoint.py  test_cli.py  test_cli_infra.py  test_color_families.py  test_color_family_script.py  test_colors.py  test_config.py  test_csv_output.py  test_extractor.py  test_fact_scorer.py  test_feedback.py  test_firecrawl_scraper.py  test_gmc_rules.py  test_google_shopping_gmc.py  test_health_audit_script.py  test_health_checks.py  test_helpers.py  test_integration.py  test_match_decisions.py  test_match_validator.py  test_models.py  test_push_manifest.py  test_push_undo.py  test_ranking.py  test_regression_runner.py  test_replay.py  test_report.py  test_resolver.py  test_review.py  test_scorer.py  test_shopify_scraper.py  test_store.py  test_sync_verification.py  test_tagger.py  (+5 more)
(+265 files in other folders)
