[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookout"
version = "0.1.0"
description = "TMA storefront merchandising — content enrichment, collection ranking, and catalog presentation"
requires-python = ">=3.11"
dependencies = [
    "the-variant-range",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
enrich = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "anthropic>=0.30",
    "tenacity>=8.0",
    "click>=8.0",
    "rich>=13.0",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "rq>=1.16",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.8",
]

[project.scripts]
lookout = "lookout.enrich.cli:main"

[tool.setuptools.packages.find]
include = ["lookout*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012", "SIM102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
