[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookout"
version = "0.1.0"
description = "TMA storefront merchandising — content enrichment, collection ranking, and catalog presentation"
requires-python = ">=3.11"
dependencies = [
    "the-variant-range",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
enrich = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "anthropic>=0.30",
    "tenacity>=8.0",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "rq>=1.16",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.8",
    "ty>=0.0.20",
]

[project.scripts]
lookout = "lookout.cli:main"

[tool.setuptools.packages.find]
include = ["lookout*"]

[tool.uv.sources]
the-variant-range = { path = "/Users/andyking/The-Variant-Range", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line-too-long — not worth enforcing
    "B008",    # function-call-in-default-argument — idiomatic FastAPI (Depends, Body)
    "RUF012",  # mutable-class-default — false positives on SQLAlchemy models
    "SIM102",  # collapsible-if — readability preference
    "SIM108",  # if-else-block-instead-of-if-exp — readability preference
    "SIM105",  # suppressible-exception — try/except/pass with comments is clearer
    "SIM103",  # needless-bool — readability preference
    "SIM110",  # reimplemented-builtin — readability preference
    "B905",    # zip-without-explicit-strict — not needed for HTML scraping
    "UP042",   # replace-str-enum — behavior change, defer
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
invalid-argument-type = "warn"
invalid-assignment = "warn"
unresolved-attribute = "warn"
call-non-callable = "warn"
not-subscriptable = "warn"
no-matching-overload = "warn"
invalid-return-type = "warn"
unsupported-operator = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
